fix overflow issue w instagram

--- a/css/stylesHome.css
+++ b/css/stylesHome.css
@@ -96,12 +96,16 @@ figcaption{
 	font-family: 'DIN Alternate Bold', 'Helvetica Bold', 'Arial Bold';
 }
 
-@media screen and (max-width: 800px){
+@media screen and (max-width: 900px){
 	.column{
 		width: 100%;
 	    display: block;
 		
 	}
+
+	.instagram-media {
+		min-width: unset !important;
+	  }
 	
 	
 }
